# workshop-data-driven-defense

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  deploy.py  pyproject.toml
notebooks/: README.md  data_analysis.ipynb  model_analysis.ipynb
src/: database.py  dataset.py
